Fix linking of native library in the native wrapper.

--- a/Wrapper/native/pom.xml
+++ b/Wrapper/native/pom.xml
@@ -87,10 +87,13 @@
 							-shared
 							-L${project.build.directory}/library-${project.version}/lib
 							-lstdc++
-							-lexample
 						</linkerStartOption>
 					</linkerStartOptions>
-
+					<linkerEndOptions>
+						<linkerEndOption>
+							-lexample
+						</linkerEndOption>
+					</linkerEndOptions>
 
 				</configuration>
 
