--- a/rosie-pattern-language/pom.xml
+++ b/rosie-pattern-language/pom.xml
@@ -5,12 +5,11 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>library</artifactId>
-    <name>Native Library</name>
+    <artifactId>rosie-pattern-language</artifactId>
     <packaging>pom</packaging>
     <parent>
-        <groupId>uk.co.humboldt.MavenJNIExample</groupId>
-        <artifactId>Global</artifactId>
+        <groupId>com.github.antoniomacri</groupId>
+        <artifactId>rosie-bundle</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
