--- a/rosie-pattern-language-native/pom.xml
+++ b/rosie-pattern-language-native/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rosie-pattern-language</artifactId>
+    <artifactId>rosie-pattern-language-native</artifactId>
     <packaging>pom</packaging>
     <parent>
         <groupId>com.github.antoniomacri</groupId>
