Rename module rosie-jna to rosie-pattern-language.

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <modules>
         <module>rosie-pattern-language-native</module>
-        <module>rosie-jna</module>
+        <module>rosie-pattern-language</module>
     </modules>
 
     <organization>
