--- a/rosie-pattern-language-native/pom.xml
+++ b/rosie-pattern-language-native/pom.xml
@@ -55,7 +55,7 @@
 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2-beta-3</version>
+                <version>3.1.0</version>
                 <configuration>
                     <descriptors>
                         <!-- Assembly contents are defined in this file -->
