--- a/rosie-pattern-language-native/pom.xml
+++ b/rosie-pattern-language-native/pom.xml
@@ -15,7 +15,6 @@
 
     <build>
         <plugins>
-
             <plugin>
                 <groupId>com.google.code.maven-replacer-plugin</groupId>
                 <artifactId>replacer</artifactId>
@@ -50,18 +49,6 @@
                 <executions>
                     <execution>
                         <!-- make all in the Maven compile phase -->
-                        <id>build-lib</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <basedir>submodule</basedir>
-                            <executable>make</executable>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <!-- make all in the Maven compile phase -->
                         <id>install-lib</id>
                         <phase>compile</phase>
                         <goals>
@@ -72,21 +59,6 @@
                             <executable>make</executable>
                             <arguments>
                                 install
-                            </arguments>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <!-- Make clean in the Maven clean phase -->
-                        <id>clean-lib</id>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <basedir>submodule</basedir>
-                            <executable>make</executable>
-                            <arguments>
-                                <argument>clean</argument>
                             </arguments>
                         </configuration>
                     </execution>
@@ -112,8 +84,52 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>build-native</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <!-- Use exec plugin to call make, to build or clean library for Linux -->
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.1</version>
+                        <executions>
+                            <execution>
+                                <!-- make all in the Maven compile phase -->
+                                <id>build-lib</id>
+                                <phase>compile</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <basedir>submodule</basedir>
+                                    <executable>make</executable>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <!-- Make clean in the Maven clean phase -->
+                                <id>clean-lib</id>
+                                <phase>clean</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <basedir>submodule</basedir>
+                                    <executable>make</executable>
+                                    <arguments>
+                                        <argument>clean</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
