Add Maven tags required for publishing to Maven Central.

--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.antoniomacri</groupId>
     <artifactId>rosie-pattern-language</artifactId>
     <version>1.0.0-alpha-7-SNAPSHOT</version>
-    <name>Rosie Pattern Language</name>
     <packaging>jar</packaging>
+
+    <name>Rosie Pattern Language</name>
+    <description>Java binding for Rosie Pattern Language</description>
+    <url>https://github.com/antoniomacri/rosie-pattern-language-java</url>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
 
     <organization>
