--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.antoniomacri</groupId>
     <artifactId>rosie-pattern-language</artifactId>
-    <version>1.0.0-alpha-8-SNAPSHOT</version>
+    <version>1.0.0-beta-1</version>
     <packaging>jar</packaging>
 
     <name>Rosie Pattern Language</name>
@@ -43,7 +43,7 @@
         <connection>scm:git:git@github.com:antoniomacri/rosie-pattern-language-java.git</connection>
         <developerConnection>scm:git:git@github.com:antoniomacri/rosie-pattern-language-java.git</developerConnection>
         <url>https://github.com/antoniomacri/rosie-pattern-language-java</url>
-        <tag>HEAD</tag>
+        <tag>rosie-pattern-language-1.0.0-beta-1</tag>
     </scm>
 
     <dependencies>
