--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.antoniomacri</groupId>
     <artifactId>rosie-pattern-language</artifactId>
-    <version>1.0.0-beta-2-SNAPSHOT</version>
+    <version>1.0.0-beta-2</version>
     <packaging>jar</packaging>
 
     <name>Rosie Pattern Language</name>
@@ -44,7 +43,7 @@
         <connection>scm:git:git@github.com:antoniomacri/rosie-pattern-language-java.git</connection>
         <developerConnection>scm:git:git@github.com:antoniomacri/rosie-pattern-language-java.git</developerConnection>
         <url>https://github.com/antoniomacri/rosie-pattern-language-java</url>
-        <tag>HEAD</tag>
+        <tag>rosie-pattern-language-1.0.0-beta-2</tag>
     </scm>
 
     <dependencies>
